# agolutils

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg  setup.py
agolutils/: __init__.py  cli.py  convert.py  io.py  msword.py  utils.py
agolutils/arcgis/: __init__.py  survey123.py  utils.py
agolutils/config/: __init__.py  command.py  config.py
agolutils/context/: __init__.py  command.py  context.py  survey123.py
agolutils/plugins/: __init__.py  demo.py
agolutils/render/: __init__.py  command.py  render.py
agolutils/test/example_photo/: config.yml  context.json  context2.json  outcontext.json  template.docx
agolutils/test/example_photo/output/: output.docx
