[metadata]
name = agolutils
# version = Version needs regex in setup.py.
# url = 
license = BSD 3-Clause License
# license_file = LICENSE
# description = 
# long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 
    Environment :: 
    Framework :: 
    License :: OSI Approved :: License
    Operating System :: OS Independent
    Programming Language :: Python


[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
install_requires =
    arcgis>=1.9.0,<1.10.0
    pandas>=1.3.0,<1.4.0
    python_dotenv>=0.19.0,<0.20.0
    pyyaml>=5.4,<6.1
    typer>=0.4.0,<0.5.0
    docxtpl>=0.14.2,<0.16.0
    pytz
    pywin32
    pillow

[options.entry_points]
console_scripts =
    agolutils = agolutils.cli:app
