[metadata]
name = agolutils
# version = Version needs regex in setup.py.
# url = 
license = BSD 3-Clause License
# license_file = LICENSE
# description = 
# long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 
    Environment :: 
    Framework :: 
    License :: OSI Approved :: License
    Operating System :: OS Independent
    Programming Language :: Python


[options]
packages = find:
include_package_data = true
python_requires = >= 3.11
install_requires =
    pandas
    python_dotenv
    pyyaml
    typer
    docxtpl
    pytz
    pywin32
    pillow

[options.entry_points]
console_scripts =
    agolutils = agolutils.cli:app
